@startuml

title __GUI's Class Diagram__\n

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.DoctorSearch {
          - enter : JButton
          - input : JTextField
          - label : JLabel
          - results : ResultsPanel<Doctor>
          + DoctorSearch()
          - getAllDoctors()
          - getDoctorResults()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.LoginPanel {
          - passField : JTextField
          - passLabel : JLabel
          - submit : JButton
          - title : JLabel
          - userField : JTextField
          - userLabel : JLabel
          + LoginPanel()
          - addAt()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.MyGUI {
          + MyGUI()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.ResultsEntry {
          - button : JButton
          - label : JLabel
          - text : String
          + ResultsEntry()
          + ResultsEntry()
          + ResultsEntry()
          + ResultsEntry()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.ResultsPanel {
          - entries : ArrayList<ResultsEntry>
          + ResultsPanel()
      }
    }
  }
  

  Clinic.Client.GUI.DoctorSearch -up-|> javax.swing.JPanel
  Clinic.Client.GUI.DoctorSearch o-- Clinic.Client.ClientSecretary : client
  Clinic.Client.GUI.DoctorSearch o-- Clinic.Core.Token : token
  Clinic.Client.GUI.LoginPanel -up-|> javax.swing.JPanel
  Clinic.Client.GUI.LoginPanel o-- Clinic.Client.ClientSecretary : client
  Clinic.Client.GUI.LoginPanel o-- Clinic.Core.Token : token
  Clinic.Client.GUI.ResultsEntry -up-|> javax.swing.JPanel
  Clinic.Client.GUI.ResultsPanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
